k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  containers:
    - name: hello-go
      image: eddieforstudies/hello-go:v3
