k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: hello-go-service
  selector:
    app: hello-go
  type: LoadBalancer
